--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -55,6 +55,7 @@
     </ol>
 {{/hasPagination}}
 
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/dropzone.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/photos.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/albumpicker.js"></script>
