--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -204,7 +204,17 @@
         display: block;
 }
 
-.uploadqueue {}
+.dropzone {
+        border: 5px dashed #ccc;
+        padding: 1em;
+        color: #aaa;
+        cursor: pointer;
+        font-size: 1.2em;
+        text-align: center;
+    }
+    .uploadqueue {
+        text-align: center;
+    }
     .dz-preview {
         margin-bottom: .5em;
         margin-right: .5em;
@@ -215,8 +225,8 @@
     }
     .dz-details, .dz-details img {
         background: #ccc;
-        width: 100px;
-        height: 100px;
+        width: 99px;
+        height: 99px;
     }
     .dz-filename, .dz-size,
     .dz-progress, .dz-success-mark,
@@ -224,7 +234,7 @@
         display: none;
     }
     .dz-remove::before {
-        display: block;
+        display: none;
         position: absolute;
         right: 0;
         top: 0;
@@ -238,9 +248,10 @@
         text-align: center;
         text-decoration: none;
     }
+    .dz-preview:hover .dz-remove::before { display: block; }
     .dz-remove {
         display: block;
         height: 0;
         width: 0;
         overflow: hidden;
-    }
+}
