Style search input

--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -12,6 +12,7 @@
         {{/hasFilters}}
         <li class="filter"><a href="#">Month</a></li>
         <li class="add"><a href="{{baseUrl}}spirit/albums/edit/new">Add</a></li>
+        <li class="search"><input type="search" placeholder="Search" /></li>
     </ul>
 </div>
 
