--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -1,4 +1,4 @@
-.throbber { display: none; }
+.throbber, #toolbox .edit, #toolbox .delete, #toolbox .search { display: none; }
 hr { clear: both; }
 
 * {
