--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -61,3 +61,4 @@
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/albumpicker.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/loadmore.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/search.js"></script>
