--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -126,6 +126,7 @@
     .albumstream ul li::after { content: ", "; }
 .albumstream ul li:last-child::after { content: ""; }
 
+.globalalbums { text-align: right; }
 .albums {
         margin-left: 0;
         list-style: none;
@@ -136,6 +137,8 @@
         margin-right: .2em;
         margin-bottom: .2em;
         font-size: .8em;
+        cursor: default;
+        text-align: left;
     }
     .albums li a {
         display: inline-block;
