--- a/spirit/views/photo-edit.html
+++ b/spirit/views/photo-edit.html
@@ -61,7 +61,10 @@
             </li>
         </ul>
 
-        {{^isSingle}}<hr />{{/isSingle}}
+        {{^isSingle}}
+        <p><a href="#" class="button">Remove From Bulk Edit</a></p>
+        <hr />
+        {{/isSingle}}
         {{/photos}}
 
         <p>
