--- a/spirit/views/css/icons.css
+++ b/spirit/views/css/icons.css
@@ -21,7 +21,7 @@ nav ul li:last-child a::before { content: "\f213"; }
 { content: "\f366"; }
 #toolbox li.edit a::before 
 { content: "\f2bf"; }
-#toolbox li.delete a::before, .button.delete::before 
+#toolbox li.delete a::before, .button.delete::before, button.delete::before
 { content: "\f252"; }
 #toolbox li.clearFilter a::before 
 { content: "\f36e"; }
