Add monthpicker partial template

--- a/spirit/views/photo-edit.html
+++ b/spirit/views/photo-edit.html
@@ -13,7 +13,7 @@
                     <input type="text" value="" name="globalalbums" />
                 </label>
             </p>
-            <ul class="albums"><li><a href="{{baseUrl}}spirit/partial/albums" title="Add to album" class="albumpicker">
+            <ul class="albums"><li><a href="{{baseUrl}}spirit/partial/albumpicker" title="Add to album" class="albumpicker">
                     Add to album
                 </a></li>
             </ul>
@@ -49,7 +49,7 @@
                     <input type="text" value="{{#albums}}{{id}},{{/albums}}" name="albums[]" />
                 </label>
                 <ul class="albums">{{#albums}}<li>{{name}}
-                    <a href="#{{id}}" title="Remove from album">Remove from album</a></li>{{/albums}}<li><a href="{{baseUrl}}spirit/partial/albums" title="Add to album" class="albumpicker">
+                    <a href="#{{id}}" title="Remove from album">Remove from album</a></li>{{/albums}}<li><a href="{{baseUrl}}spirit/partial/albumpicker" title="Add to album" class="albumpicker">
                         Add to album
                     </a></li>
                 </ul>
