--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -13,7 +13,7 @@
             {{/filterSearch}}
         </li>
         {{/hasFilters}}
-        <li class="filter"><a href="{{baseUrl}}spirit/partial/albums" class="albumpicker">Album</a></li>
+        <li class="filter"><a href="{{baseUrl}}spirit/partial/albumpicker" class="albumpicker">Album</a></li>
         <li class="filter"><a href="#">Month</a></li>
         <li class="upload"><a href="{{baseUrl}}spirit/photos/upload">Upload</a></li>
         <li class="edit"><a href="{{baseUrl}}spirit/photos/edit">Edit</a></li>
