Change globalalbums behavior

--- a/spirit/views/photo-edit.html
+++ b/spirit/views/photo-edit.html
@@ -9,7 +9,7 @@
         {{^isSingle}}
         <div class="globalalbums">
             <p>
-                <label><span>Overwrite all albums settings:</span>
+                <label><span>Add photos to following albums:</span>
                     <input type="text" value="" name="globalalbums" />
                 </label>
             </p>
