Change albumpicker template

--- a/spirit/views/partials/albumpicker.html
+++ b/spirit/views/partials/albumpicker.html
@@ -1,7 +1,7 @@
 {{#hasAlbums}}
 <ol>
     {{#albums}}
-    <li><a href="{{baseUrl}}spirit/photos/album/{{id}}"><strong>{{name}}</strong> {{description}}</a></li>
+    <li><a href="{{baseUrl}}spirit/photos/album/{{id}}"><strong>{{name}}</strong> {{formattedDate}}</a></li>
     {{/albums}}
 </ol>
 {{/hasAlbums}}
