--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -14,7 +14,7 @@
         </li>
         {{/hasFilters}}
         <li class="filter"><a href="{{baseUrl}}spirit/partial/albumpicker" class="albumpicker">Album</a></li>
-        <li class="filter"><a href="#">Month</a></li>
+        <li class="filter"><a href="{{baseUrl}}spirit/partial/monthpicker/photos" class="monthpicker">Month</a></li>
         <li class="upload"><a href="{{baseUrl}}spirit/photos/upload">Upload</a></li>
         <li class="edit"><a href="{{baseUrl}}spirit/photos/edit">Edit</a></li>
         <li class="delete"><a href="{{baseUrl}}spirit/photos/delete">Delete</a></li>
@@ -60,6 +60,7 @@
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/photos.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/albumpicker.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/monthpicker.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/loadmore.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/search.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/resizer.js"></script>
