--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -10,7 +10,7 @@
             {{/filterMonth}}
         </li>
         {{/hasFilters}}
-        <li class="filter"><a href="#">Month</a></li>
+        <li class="filter"><a href="{{baseUrl}}spirit/partial/monthpicker/albums" class="monthpicker">Month</a></li>
         <li class="add"><a href="{{baseUrl}}spirit/albums/edit/new">Add</a></li>
         <li class="search"><input type="search" placeholder="Search" /></li>
     </ul>
@@ -62,4 +62,5 @@
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/loadmore.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmdelete.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/monthpicker.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/search.js"></script>
