--- a/spirit/views/album-edit.html
+++ b/spirit/views/album-edit.html
@@ -14,7 +14,7 @@
             </li>
             <li>
                 <label><span>Description:</span>
-                    <input type="text" value="{{description}}" name="description" />
+                    <textarea name="description">{{description}}</textarea>
                 </label>
             </li>
         </ul>
