--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -77,6 +77,7 @@
         display: block;
         margin-bottom: 1em;
         padding: 1px 1em;
+        padding-top: 2.5em;
         background: #26292A;
         color: white;
     }
