Animate albumstream item background image opacity

--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -90,9 +90,11 @@
         display: block;
         background: #26292A;
         content: '';
-        opacity: .5;
+        opacity: .3;
         z-index: 0;
+        transition: opacity .2s;
     }
+    .albumstream > li:hover::after { opacity: .5; }
     .albumstream > li > * { position: relative; z-index: 1; }
     .albumstream h3 {
         letter-spacing: 1px;
