--- a/spirit/views/album-edit.html
+++ b/spirit/views/album-edit.html
@@ -20,7 +20,7 @@
         </ul>
 
         <p>
-            <button type="submit">Update</button>
+            <button type="submit">{{#createNew}}Create{{/createNew}}{{^createNew}}Update{{/createNew}}</button>
         </p>
     </form>
 </main>
