--- a/spirit/views/album-edit.html
+++ b/spirit/views/album-edit.html
@@ -9,7 +9,7 @@
         <ul class="form">
             <li class="title">
                 <label><span>Name:</span>
-                    <input type="text" value="{{name}}" name="name" placeholder="(Untitled)" />
+                    <input type="text" value="{{name}}" name="name" placeholder="(Untitled)" maxlength="64" />
                 </label>
             </li>
             <li>
