--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -11,7 +11,7 @@
         </li>
         {{/hasFilters}}
         <li class="filter"><a href="{{baseUrl}}spirit/partial/monthpicker/albums" class="monthpicker">Month</a></li>
-        <li class="add"><a href="{{baseUrl}}spirit/albums/edit/new">Add</a></li>
+        <li class="add"><a href="{{baseUrl}}spirit/albums/edit/new">New Album</a></li>
         <li class="search"><input type="search" placeholder="Search" /></li>
     </ul>
 </div>
