--- a/spirit/views/photo-edit.html
+++ b/spirit/views/photo-edit.html
@@ -28,7 +28,7 @@
             <img src="{{largeImageLink}}" alt="{{title}}" />
             {{#user}}
             <em>
-                Uploaded by <a href="{{baseUrl}}spirit/users/{{id}}" title="{{fullname}}">@{{name}}</a>
+                Uploaded by <a href="{{baseUrl}}spirit/users/{{id}}" title="{{fullname}}">{{name}}</a>
             </em>
             {{/user}}
         </p>
