--- a/spirit/views/user-edit.html
+++ b/spirit/views/user-edit.html
@@ -18,7 +18,7 @@
                 </label>
             </li>
             <li>
-                <label><span>Password:</span>
+                <label><span>{{#createNew}}P{{/createNew}}{{^createNew}}New p{{/createNew}}assword:</span>
                     <input type="password" value="" name="password" />
                 </label>
             </li>
