--- a/spirit/views/users.html
+++ b/spirit/views/users.html
@@ -1,6 +1,6 @@
 <div id="toolbox">
     <ul>
-        <li class="add"><a href="{{baseUrl}}spirit/users/edit/new">New User</a></li>
+        <li class="add"><a href="{{baseUrl}}spirit/users/new">New User</a></li>
     </ul>
 </div>
 
