Edit users in dialog

--- a/spirit/views/users.html
+++ b/spirit/views/users.html
@@ -17,3 +17,6 @@
         {{/users}}
     </ul>
 </main>
+
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/users.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
