--- a/spirit/views/users.html
+++ b/spirit/views/users.html
@@ -13,7 +13,7 @@
             <a href="{{baseUrl}}spirit/users/{{id}}">
                 <img src="{{avatarLink}}&amp;s=50" width="50" height="50" alt="Avatar" />
                 {{name}}
-                {{#admin}}<span>Admin</span>{{/admin}}
+                {{#admin}}<span class="admin">Admin</span>{{/admin}}
                 {{#current}}<span>You</span>{{/current}}
             </a>
         </li>
