--- a/spirit/views/user-edit.html
+++ b/spirit/views/user-edit.html
@@ -47,3 +47,4 @@
 
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/backbutton.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmclose.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmdelete.js"></script>
