--- a/spirit/views/css/colors.css
+++ b/spirit/views/css/colors.css
@@ -55,11 +55,11 @@ button:hover, .button:hover, .albums li:hover,
 button:focus, .button:focus
 { opacity: 1; }
 
-#toolbox li.delete a:hover, .button.delete:hover, .albums li:hover,
-.dz-remove:hover::before
+nav li:last-child a:hover, #toolbox li.delete a:hover, .button.delete:hover,
+.albums li:hover, .dz-remove:hover::before
 { background: #D1370E; color: white; }
 
-nav li:last-child a:hover, button[type="submit"]:hover, 
+button[type="submit"]:hover, 
 .photostream li a.permalink:hover::before, #toolbox li.edit a:hover,
 .albums li:last-child:hover, #toolbox li.add a:hover
 { background: #0082f0; color: white; }
